<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jarvece</string>
    <string name="send">Send</string>
    <string name="saveUser">Sauvegarder</string>
    <string name="chat">Chat</string>
    <string name="pairing">Pairing</string>
    <string name="create">Créer un nouveau compte</string>
    <string name="forgot">Se connecter en invité</string>
    <string name="coToDe">Vous devez être déja jumelé avec le device avec qui vous essayez de vous connecter(paramètre bluetooth de votre device ==> jumelage).\nConnectez vous à un device : </string>
    <string name="action_settings">Settings</string>
    <string name="bienvenue">Demarrer</string>
    <string name="retour">Retour</string>
    <string name="parametre">Paramètres</string>
    <string name="EnvoyerInfo">Envoyer info</string>
    <string name="Historique">Historique</string>
    <string name="Supp">-</string>
    <string name="Logindp">Login : </string>
    <string name="Login">Login</string>
    <string name="Pseudoddp">Pseudo : </string>
    <string name="Pseudo">Pseudo</string>
    <string name="Passworddp">Password : </string>
    <string name="Password">Password</string>
    <string name="Retour">Retour</string>
    <string name="Valider">Valider</string>
    <string name="Deconnexion">Déconnexion ?</string>
    <string name="Oui">Oui</string>
    <string name="Suppression">Suppression</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected</string>
    <string name="title_not_connected">not connected</string>
    <string name="ChangerPseudo">Nouveau Pseudo : </string>
    <string name="NouveauPseudo">Nouveau Pseudo</string>
    <string name="InformationUserCreate">Merci de renseigner votre login, votre pseudo (apparaîtra à votre interlocuteur) ainsi que votre mot de passe.</string>

</resources>