<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/bienvenue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_above="@+id/LinearLoginPassword"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_jarvece_bluetooth" />

    <LinearLayout
        android:id="@+id/LinearLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_above="@+id/buttonAccueil"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLogin"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewlogin"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Logindp" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/Login"
                android:singleLine="true" >
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearPassword"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewPassword"
                style="@style/TextViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Passworddp" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:singleLine="true" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewCreate"
                style="@style/TextViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/create"
                android:clickable="true"
                android:onClick="onClick"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/textViewForgot"
                style="@style/TextViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot"
                android:onClick="onClick"
                android:clickable="true" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAccueil"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/bienvenue" />

</RelativeLayout>